[gd_scene load_steps=4 format=3 uid="uid://i48t7rwoaplh"]

[ext_resource type="Theme" uid="uid://ca4ojcmrepr24" path="res://UI/standard_theme.tres" id="1_1fhmq"]
[ext_resource type="Script" path="res://UI/pause_menu.gd" id="1_5c51i"]
[ext_resource type="PackedScene" uid="uid://d2ypbvp32opvk" path="res://UI/options.tscn" id="1_pxeyw"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1fhmq")
script = ExtResource("1_5c51i")

[node name="Options" parent="." instance=ExtResource("1_pxeyw")]
visible = false
layout_mode = 1

[node name="MainPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -175.0
offset_right = 300.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Resume" type="Button" parent="MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Options" type="Button" parent="MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="MainMenu" type="Button" parent="MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="Quit" type="Button" parent="MainPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MainPanel/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MainPanel/MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MainPanel/MarginContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="MainPanel/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
